Refactor URL handling in UpnpForwarderPlugin to use URI.create for improved robustness